Spring Security JWT and Liquibase

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,11 @@ app.security.student.user=student
 app.security.student.pass=pass1234
 
 logging.level.root=INFO
+
+
+# Liquibase Configuration
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+# Optional: ensure it runs on startup
+spring.liquibase.enabled=true
+# Activate both 'default' and 'dev' changesets
+spring.liquibase.contexts=dev
