--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -11,3 +11,14 @@ app.security.student.pass=${QA_STUDENT_PASSWORD:studentpass}
 #app.security.student.pass=${QA_STUDENT_PASSWORD}
 
 logging.level.root=INFO
+
+
+spring.jpa.hibernate.ddl-auto=validate
+
+# Liquibase Configuration
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+# Optional: ensure it runs on startup
+spring.liquibase.enabled=true
+
+# Activate both 'default' and 'dev' changesets
+spring.liquibase.contexts=qa
