--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,11 @@ app.security.student.user=${PROD_STUDENT_USER}
 app.security.student.pass=${PROD_STUDENT_PASSWORD}
 
 logging.level.root=ERROR
+
+
+# Liquibase Configuration
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+# Optional: ensure it runs on startup
+spring.liquibase.enabled=true
+# Only run changesets that have NO context or are marked 'prod'
+spring.liquibase.contexts=prod
