Added seeding of tables in Liquibase and fixed jwt expiry time

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,8 +20,8 @@ spring.liquibase.contexts=qa
 # Use a default only for dev, but require an ENV var for safety
 app.jwt.secret=${JWT_SECRET:very_long_default_secret_key_for_local_dev_only_32_chars}
 # 1 hour in milliseconds in Highly readable format
-app.jwt.expiration=15m
-#app.jwt.expiration=900000
+#app.jwt.expiration=15m
+app.jwt.expiration=900000
 
 
 # LOGGING CONFIGURATION
