--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=course_management
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:qa}
 
 #Changing port
 server.port=8099
