--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/changes/001-create-users-table.yaml
   - include:
       file: db/changelog/changes/002-seed-users.yaml
+  - include:
+      file: db/changelog/changes/003-seed-pre-setup-tables.yaml
