Added Tweaks for PROD

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,10 +3,10 @@ app.security.admin.user=teacher
 app.security.admin.pass=admin1234
 app.security.student.user=student
 app.security.student.pass=pass1234
-
 logging.level.root=INFO
 
-
+# Override the hibernate.ddl-auto default 'none' to 'validate'
+spring.jpa.hibernate.ddl-auto=validate
 # Liquibase Configuration
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 # Optional: ensure it runs on startup
