--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,45 @@
-# Easy to remember for coding
+spring.datasource.url=jdbc:mysql://${DB_HOST:mysql-code-county-code-county.i.aivencloud.com}:${DB_PORT:20571}/${DB_NAME:defaultdb}?allowPublicKeyRetrieval=true&useSSL=true
+spring.datasource.username=avnadmin
+spring.datasource.password=${MYSQL8_DB_PASSWORD:your_password_here}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 app.security.admin.user=${PROD_ADMIN_USER}
 app.security.admin.pass=${PROD_ADMIN_PASSWORD}
 app.security.student.user=${PROD_STUDENT_USER}
 app.security.student.pass=${PROD_STUDENT_PASSWORD}
 
-logging.level.root=ERROR
-
-
+# Override the hibernate.ddl-auto default 'none' to 'validate'
+spring.jpa.hibernate.ddl-auto=validate
 # Liquibase Configuration
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 # Optional: ensure it runs on startup
 spring.liquibase.enabled=true
 # Only run changesets that have NO context or are marked 'prod'
-spring.liquibase.contexts=prod
+spring.liquibase.contexts=qa
+
+# Use a default only for dev, but require an ENV var for safety
+app.jwt.secret=${JWT_SECRET:very_long_default_secret_key_for_local_dev_only_32_chars}
+# 1 hour in milliseconds in Highly readable format
+app.jwt.expiration=15m
+#app.jwt.expiration=900000
+
+
+# LOGGING CONFIGURATION
+# 1. Root Level: Keep at INFO to avoid framework spam (Spring/Hibernate)
+logging.level.root=INFO
+# 2. Application Logs: Set to INFO for Prod.
+# Change to DEBUG only temporarily if you are troubleshooting a live bug.
+logging.level.com.trumio.course_management=INFO
+# 3. Hibernate/SQL Logs: Generally set to WARN or ERROR in Prod.
+# Only use INFO if you specifically need to see the query flow without the data values.
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+# 4. Console Output Formatting (Essential for Render Dashboard)
+spring.output.ansi.enabled=ALWAYS
+# Added [App: ${spring.application.name}] to help if you ever aggregate logs
+logging.pattern.console=%d{HH:mm:ss} %clr(%5p) [%t] %clr(%logger{36}){cyan} : %m%n
+
+# 5. File Logging: DISABLE for Render Free Tier
+# Reason: Render's filesystem is ephemeral. Files are deleted on every restart/sleep.
+# Use Render's built-in Log Explorer instead.
+# logging.file.name=logs/course-app.log
