--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -1,24 +1,14 @@
-# Easy to remember for coding
-# src/main/resources/application-qa.properties
 app.security.admin.user=${QA_ADMIN_USER:admin}
 app.security.admin.pass=${QA_ADMIN_PASSWORD:adminpass}
 app.security.student.user=${QA_STUDENT_USER:student}
 app.security.student.pass=${QA_STUDENT_PASSWORD:studentpass}
-
-#app.security.admin.user=${QA_ADMIN_USER}
-#app.security.admin.pass=${QA_ADMIN_PASSWORD}
-#app.security.student.user=${QA_STUDENT_USER}
-#app.security.student.pass=${QA_STUDENT_PASSWORD}
-
 logging.level.root=INFO
 
-
+# Override the hibernate.ddl-auto default 'none' to 'validate'
 spring.jpa.hibernate.ddl-auto=validate
-
 # Liquibase Configuration
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 # Optional: ensure it runs on startup
 spring.liquibase.enabled=true
-
 # Activate both 'default' and 'dev' changesets
 spring.liquibase.contexts=qa
