--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,7 @@
 databaseChangeLog:
   - include:
+      file: db/changelog/changes/000-pre-setup-tables.yaml
+  - include:
       file: db/changelog/changes/001-create-users-table.yaml
   - include:
       file: db/changelog/changes/002-seed-users.yaml
