Disables Strict mode for Avian MySQL connection

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${DB_HOST:mysql-code-county-code-county.i.aivencloud.com}:${DB_PORT:20571}/${DB_NAME:defaultdb}?allowPublicKeyRetrieval=true&useSSL=true
+spring.datasource.url=jdbc:mysql://${DB_HOST:mysql-code-county-code-county.i.aivencloud.com}:${DB_PORT:20571}/${DB_NAME:defaultdb}?allowPublicKeyRetrieval=true&useSSL=true&sessionVariables=sql_require_primary_key=OFF
 spring.datasource.username=avnadmin
 spring.datasource.password=${MYSQL8_DB_PASSWORD:your_password_here}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
